hphp/hack/test/typecheck/inout/bad_inout_use_arg11.php.exp
File "bad_inout_use_arg11.php", line 7, characters 11-21:
Arguments for inout parameters must be local variables or simple subscript expressions on vecs, dicts, keysets, or arrays (NastCheck[3050])
File "bad_inout_use_arg11.php", line 7, characters 11-19:
Cannot use [] for reading (NastCheck[3047])
