hphp/hack/test/typecheck/inout/bad_inout_use_arg11.php
<?hh // strict

function f(inout string $s): void {}

function test(): void {
  $x = dict['foo' => vec['bar']];
  f(inout $x['foo'][]);
}
